# Backdoor

./: LICENSE  README.md
cpp_client/: CMakeLists.txt  client.sln  client.vcxproj  config.json  fb.cpp  fb.h  kz.cpp  kz.h  mt.cpp  mt.h  pd.cpp  pd.h  qa.h  rw.cpp  rw.h  wn.cpp
php_server/: api.php  callback.php  config.php  index.php  logs.php  server.php
